--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,31 @@
 <section class="section">
 	
 	<div class="container">
+		
+		<nav class="level">
+			<div class="level-left">
+				<p class="level-item">
+					<strong>Action</strong>
+				</p>
+			</div>
+
+			<div class="level-right">
+				<p class="level-item">
+					<%= link_to "Edit", edit_post_path(@post), class: "button" %>
+				</p>
+				<p class="level-item">
+
+					<%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure"},
+					class: "button is-danger" %>
+				</p>
+			</div>
+		</nav>
+
+		<hr>
+
 		<h1 class="content"> <%=  @post.content %> </h1>
+
 	</div>
 </section>
+
+<section class="comments"></section>
